kubernetes/netmaker/manifest/netpol.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all-except-kube-dns
  namespace: my-netmaker
spec:
  policyTypes:
  - Ingress
  - Egress
  podSelector: {}
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internet-egress
  namespace: my-netmaker
spec:
  podSelector:
    matchLabels:
      networking/allow-internet-access: "true"
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
          - 10.0.0.0/8
          - 192.168.0.0/16
          - 172.16.0.0/20
  ingress: []
  policyTypes:
  - Egress
  - Ingress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netmaker-backend
  namespace: my-netmaker
spec:
  podSelector:
    matchLabels:
      app: netmaker
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: my-cloudflared
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik-system
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: my-traefik
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - port: 8081 # netmaker
        - port: 3478 # stun
          protocol: UDP

    # - from:
    #     - ipBlock:
    #         cidr: 0.0.0.0/0
    #   ports:
    #     - protocol: UDP
    #       port: 31821
    #       endPort: 31829

  egress:
    # - to:
    #     - ipBlock:
    #         cidr: 0.0.0.0/0
    #   ports:
    #     - protocol: UDP
    #       port: 31821
    #       endPort: 31829
    - to:
        - namespaceSelector:
            matchLabels:
              networking/namespace: my-netmaker
          podSelector:
            matchLabels:
              app: netmaker-mq
      ports:
        - port: 1883

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netmaker-mq
  namespace: my-netmaker
spec:
  podSelector:
    matchLabels:
      app: netmaker-mq
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: my-cloudflared
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik-system
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: my-traefik
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - port: 8883
    - from:
        - namespaceSelector:
            matchLabels:
              networking/namespace: my-netmaker
          podSelector:
            matchLabels:
              app: netmaker
      ports:
        - port: 1883

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netmaker-ui
  namespace: my-netmaker
spec:
  podSelector:
    matchLabels:
      app: netmaker-ui
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: my-cloudflared
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik-system
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: my-traefik
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - port: 80
